--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="icon" href="data:,">
+  <link rel="icon" href="./favicon.svg"/>
+  <link rel="icon" href="./favicon.png"/>
   <title>Dictm</title>
 </head>
 
